--- a/src/pages/score-main.html
+++ b/src/pages/score-main.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="page-user-info">
-      <h3 class="info-title">- 考生成绩 -</h3>
+      <h3 class="info-title tag-title">考生成绩</h3>
       <ul class="info-list">
         <li>姓名：韩梅梅</li>
         <li>准考证号：01030013503</li>
@@ -114,8 +114,8 @@
             <p class="sc-num">108.00</p>
           </li>
           <li class="base-all">
-            <div class="base-chart">
-              <p class="chart-tips">超过54%全体考生</p>
+            <div class="base-chart base-chart-cont" echart-ratio="60">
+              <p class="chart-tips">超过<i>60%</i>全体考生</p>
             </div>
             <div class="base-infos">
               <p class="tag-title">全体概况</p>
@@ -146,8 +146,8 @@
             <p class="sc-num">108.00</p>
           </li>
           <li class="base-all">
-            <div class="base-chart">
-              <p class="chart-tips">超过54%全体考生</p>
+            <div class="base-chart base-chart-cont" echart-ratio="64">
+              <p class="chart-tips">超过<i>64%</i>全体考生</p>
             </div>
             <div class="base-infos">
               <p class="tag-title">全体概况</p>
@@ -178,8 +178,8 @@
             <p class="sc-num">108.00</p>
           </li>
           <li class="base-all">
-            <div class="base-chart">
-              <p class="chart-tips">超过54%全体考生</p>
+            <div class="base-chart base-chart-cont" echart-ratio="40">
+              <p class="chart-tips">超过<i>40%</i>全体考生</p>
             </div>
             <div class="base-infos">
               <p class="tag-title">全体概况</p>
@@ -216,8 +216,8 @@
             <p class="sc-num">108.00</p>
           </li>
           <li class="base-all">
-            <div class="base-chart">
-              <p class="chart-tips">超过54%全体考生</p>
+            <div class="base-chart base-chart-cont" echart-ratio="50">
+              <p class="chart-tips">超过<i>50%</i>全体考生</p>
             </div>
             <div class="base-infos">
               <p class="tag-title">全体概况</p>
@@ -248,8 +248,8 @@
             <p class="sc-num">108.00</p>
           </li>
           <li class="base-all">
-            <div class="base-chart">
-              <p class="chart-tips">超过54%全体考生</p>
+            <div class="base-chart base-chart-cont" echart-ratio="75">
+              <p class="chart-tips">超过<i>75%</i>全体考生</p>
             </div>
             <div class="base-infos">
               <p class="tag-title">全体概况</p>
@@ -285,5 +285,8 @@
     <div class="page-bot-num">02</div>
 
   </div>
+
+  <script type="text/javascript" src="/static/js/score-main.js"></script>
+
 </body>
 </html>
