--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
   <script type="text/javascript">
     window.onload = function () {
       var iframes = document.getElementById('iframes');
-      iframes.src = '/pages/cover.html';
+      iframes.src = '/pages/score-item-two.html';
 
       var navlis = document.getElementById('navs').querySelectorAll('li')
       navlis.forEach(function (item) {
