--- a/src/pages/score-item-four.html
+++ b/src/pages/score-item-four.html
@@ -51,7 +51,7 @@
     <div class="page-bot-num">03/4</div>
 
   </div>
-  <script type="text/javascript" src="/static/js/echarts.common.min.js"></script>
+  <script type="text/javascript" src="/static/js/echarts.min.js"></script>
   <script type="text/javascript" src="/static/js/echarts.func.js"></script>
   <script type="text/javascript" src="/static/js/score-four.js"></script>
 </body>
