--- a/src/pages/score-item-one.html
+++ b/src/pages/score-item-one.html
@@ -218,7 +218,7 @@
     <div class="page-bot-num">03/1</div>
 
   </div>
-  <script type="text/javascript" src="/static/js/echarts.common.min.js"></script>
+  <script type="text/javascript" src="/static/js/echarts.min.js"></script>
   <script type="text/javascript" src="/static/js/echarts.func.js"></script>
   <script type="text/javascript" src="/static/js/score-one.js"></script>
 </body>
