--- a/src/pages/score-item-three.html
+++ b/src/pages/score-item-three.html
@@ -59,7 +59,7 @@
     <div class="page-bot-num">03/3</div>
 
   </div>
-  <script type="text/javascript" src="/static/js/echarts.common.min.js"></script>
+  <script type="text/javascript" src="/static/js/echarts.min.js"></script>
   <script type="text/javascript" src="/static/js/echarts.func.js"></script>
   <script type="text/javascript" src="/static/js/score-three.js"></script>
 </body>
