--- a/src/pages/score-item-two.html
+++ b/src/pages/score-item-two.html
@@ -152,7 +152,7 @@
     <div class="page-bot-num">03/2</div>
 
   </div>
-  <script type="text/javascript" src="/static/js/echarts.common.min.js"></script>
+  <script type="text/javascript" src="/static/js/echarts.min.js"></script>
   <script type="text/javascript" src="/static/js/echarts.func.js"></script>
   <script type="text/javascript" src="/static/js/score-two.js"></script>
 </body>
