--- a/src/pages/score-item-twot.html
+++ b/src/pages/score-item-twot.html
@@ -153,7 +153,7 @@
 
   </div>
 
-  <script type="text/javascript" src="/static/js/echarts.common.min.js"></script>
+  <script type="text/javascript" src="/static/js/echarts.min.js"></script>
   <script type="text/javascript" src="/static/js/echarts.func.js"></script>
   <script type="text/javascript" src="/static/js/score-two.js"></script>
 </body>
