--- a/src/pages/cover.html
+++ b/src/pages/cover.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>cover</title>
   <link rel="stylesheet" type="text/css" href="/static/css/common.css">
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  
+
   <div class="page-box">
     <div class="cover-header">
       <div class="cover-logo">
