--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="keywords" content="acc-报告" />
   <meta name="description" content="acc-报告展示" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=1">
   <meta name="renderer" content="webkit|ie-comp|ie-stand">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
