--- a/src/pages/score-item-four.html
+++ b/src/pages/score-item-four.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>score item-four</title>
   <link rel="stylesheet" type="text/css" href="/static/css/common.css">
