--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="keywords" content="acc-报告" />
   <meta name="description" content="acc-报告展示" />
-  <meta name="viewport" content="width=device-width, user-scalable=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, user-scalable=1">
   <meta name="renderer" content="webkit|ie-comp|ie-stand">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -16,13 +16,13 @@
   <div class="bd-header">
     <h1 class="bd-title">ACC 报告</h1>
     <h3 class="bd-sub-title" id="bd-sub-title"></h3>
+    <div class="sub-t-btn" id="sub-t-btn"></div>
   </div>
   <div class="bd-navs" id="bd-navs">
   </div>
 
   <div class="bd-main">
     <div class="bd-m-cont" id="bd-m-cont">
-
     </div>
   </div>
 
