--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
   <div class="bd-header">
     <h1 class="bd-title">ACC 报告</h1>
     <h3 class="bd-sub-title" id="bd-sub-title"></h3>
-    <div class="sub-t-btn" id="sub-t-btn"></div>
+    <div class="sub-t-btn" id="sub-t-btn">目录</div>
   </div>
   <div class="bd-navs" id="bd-navs">
   </div>
 
-  <div class="bd-main">
+  <div class="bd-main" id="bd-main">
     <div class="bd-m-cont" id="bd-m-cont">
     </div>
   </div>
