--- a/src/index.html
+++ b/src/index.html
@@ -13,20 +13,21 @@
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 </head>
 <body>
+  <!-- 标题 -->
   <div class="bd-header">
     <h1 class="bd-title">ACC 报告</h1>
     <h3 class="bd-sub-title" id="bd-sub-title"></h3>
     <div class="sub-t-btn" id="sub-t-btn">目录</div>
   </div>
+  <!-- 导航 -->
   <div class="bd-navs" id="bd-navs">
   </div>
-
+  <!-- 主题内容 -->
   <div class="bd-main" id="bd-main">
     <div class="bd-m-cont" id="bd-m-cont">
     </div>
   </div>
 
-  <script src="/static/libs/require.min.js" data-main="/static/js/index" defer async="true"></script>
   <!-- templates  -->
   <!-- menus -->
   <script id="menus" type="text/html">
@@ -702,5 +703,8 @@
 
     </div>
   </script>
+  <!-- js -->
+  <script src="/static/libs/require.min.js" data-main="/static/js/index" defer async="true"></script>
+
 </body>
 </html>
