--- a/src/school/page-three-cate.html
+++ b/src/school/page-three-cate.html
@@ -139,5 +139,8 @@
     <div class="page-bot-num">05/1</div>
 
   </div>
+  <script type="text/javascript" src="/static/js/echarts.min.js"></script>
+  <script type="text/javascript" src="/static/js/echarts.func.js"></script>
+  <script type="text/javascript" src="/static/js/school-three-cate.js"></script>
 </body>
 </html>
