--- a/src/school/page-three-t.html
+++ b/src/school/page-three-t.html
@@ -112,5 +112,8 @@
     <div class="page-bot-num">04/1</div>
 
   </div>
+  <script type="text/javascript" src="/static/js/echarts.min.js"></script>
+  <script type="text/javascript" src="/static/js/echarts.func.js"></script>
+  <script type="text/javascript" src="/static/js/school-three.js"></script>
 </body>
 </html>
