--- a/src/school/page-twot.html
+++ b/src/school/page-twot.html
@@ -121,5 +121,8 @@
     <div class="page-bot-num">03/2</div>
 
   </div>
+  <script type="text/javascript" src="/static/js/echarts.min.js"></script>
+  <script type="text/javascript" src="/static/js/echarts.func.js"></script>
+  <script type="text/javascript" src="/static/js/school-twot.js"></script>
 </body>
 </html>
