--- a/src/school/page-three-cate.html
+++ b/src/school/page-three-cate.html
@@ -47,7 +47,7 @@
               </tr>
               <tr>
                 <td>E</td>
-                <td>语言文化知识与运用</td>
+                <td>分析综合能力</td>
                 <td>22</td>
                 <td>51.63%</td>
                 <td>47.19%</td>
