--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <!-- 标题 -->
   <div class="bd-header">
     <h1 class="bd-title">ACC 报告</h1>
-    <a style="display:black;float:left;height:60px;line-height:60px;" href="sch-rep.html">学校报告</a>
+    <a class="bd-href" href="sch-rep.html">学校报告</a>
     <h3 class="bd-sub-title" id="bd-sub-title"></h3>
     <div class="sub-t-btn" id="sub-t-btn">目录</div>
   </div>
