--- a/src/sch-rep.html
+++ b/src/sch-rep.html
@@ -29,19 +29,6 @@
     </div>
   </div>
 
-<!-- <ul>
-  <li><a href="/school/introduction.html">前言</a></li>
-  <li><a href="/school/page-one.html">01</a></li>
-  <li><a href="/school/page-onet.html">01-2</a></li>
-  <li><a href="/school/page-two.html">02</a></li>
-  <li><a href="/school/page-twot.html">02-2</a></li>
-  <li><a href="/school/page-twoth.html">02-3</a></li>
-  <li><a href="/school/page-three.html">03-1</a></li>
-  <li><a href="/school/page-three-t.html">03-2</a></li>
-  <li><a href="/school/page-three-cate.html">03-3</a></li>
-  <li><a href="/school/page-three-cate-t.html">03-4</a></li>
-</ul> -->
-
 <!-- templates  -->
 <!-- menus -->
 <script id="menus" type="text/html">
@@ -134,7 +121,7 @@
     <div class="page-bot-num">01</div>
   </div>
 </script>
-
+<!-- overview -->
 <script id="overview" type="text/html">
   <div class="page-box school-box">
     <div class="page-head">
@@ -276,7 +263,7 @@
 
   </div>
 </script>
-
+<!-- goal -->
 <script id="goal" type="text/html">
   <div class="page-box school-box">
     <div class="page-head">
@@ -339,7 +326,7 @@
 
   </div>
 </script>
-
+<!-- category -->
 <script id="category" type="text/html">
   <div class="page-box school-box">
     <div class="page-head">
@@ -428,10 +415,6 @@
 
   </div>
 </script>
-
-<!-- <script id="" type="text/html">
-
-</script> -->
 
 <!-- js -->
 <script src="/static/libs/require.min.js" data-main="/static/js/school" defer async="true"></script>
