--- a/src/school/page-one.html
+++ b/src/school/page-one.html
@@ -72,8 +72,10 @@
             <span>（全体共 789 所学校）</span>
           </div>
           <div class="rate-ruler">
-            <span class="ruler-mark" style="left: 88%;"></span>
-            <span class="ruler-dec">超过全体88%的学校</span>
+            <span class="ruler-mk">
+              <span class="ruler-mark" style="left: 88%;"></span>
+            </span>
+            <span class="ruler-dec">超过全体<i>88%</i>的学校</span>
             <span class="ruler-nums"><em>0</em><em>25</em><em>50</em><em>75</em><em>100</em></span>
           </div>
         </div>
@@ -83,7 +85,9 @@
             <span>（全体共 789 所学校）</span>
           </div>
           <div class="rate-ruler">
-            <span class="ruler-mark"></span>
+            <span class="ruler-mk">
+              <span class="ruler-mark"></span>
+            </span>
             <span class="ruler-dec">超过全体88%的学校</span>
             <span class="ruler-nums"><em>0</em><em>25</em><em>50</em><em>75</em><em>100</em></span>
           </div>
