--- a/src/school/page-onet.html
+++ b/src/school/page-onet.html
@@ -72,18 +72,22 @@
             <span>（全体共 789 所学校）</span>
           </div>
           <div class="rate-ruler">
-            <span class="ruler-mark" style="left: 88%;"></span>
+            <span class="ruler-mk">
+              <span class="ruler-mark"></span>
+            </span>
             <span class="ruler-dec">超过全体88%的学校</span>
             <span class="ruler-nums"><em>0</em><em>25</em><em>50</em><em>75</em><em>100</em></span>
           </div>
         </div>
         <div class="rates-li">
           <div class="rate-title">
-            <p>本校平均分超过本省 88% 的学校</p>
+            <p>本校平均分超过本省<i>88%</i>的学校</p>
             <span>（全体共 789 所学校）</span>
           </div>
           <div class="rate-ruler">
-            <span class="ruler-mark"></span>
+            <span class="ruler-mk">
+              <span class="ruler-mark"></span>
+            </span>
             <span class="ruler-dec">超过全体88%的学校</span>
             <span class="ruler-nums"><em>0</em><em>25</em><em>50</em><em>75</em><em>100</em></span>
           </div>
